--- a/cooperations.tex
+++ b/cooperations.tex
@@ -791,7 +791,7 @@ Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, 
 \item The Eilenberg--Mac Lane spaces $\OS{H}{*}$ appear as the layers of Postnikov towers.  If we were to want to analyze the $K$--homology of a Postnikov tower (as we will in \Cref{ChapterSigmaOrientation}), we will naturally encounter pieces of $K_* \OS{H}{*}$, and we would be wise to have a firm handle on these objects.  It is a tribute to the perspective offered here that the successful way to approach this computation is not one-at-a-time, handicrafted for each possible Eilenberg--Mac Lane space, but rather all-at-once, as suggested by the unstable cooperations picture.
 \end{enumerate}
 
-Unsurprisingly, our analysis will rest on the bar spectral sequence \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}.\]  However, because $K$--theory is naturally a $2$--periodic theory, our method in \Cref{COableCoopnsII} of inducting on homological degree and working with a triangular corner of the spectral sequence will fail.  Instead, we will induct on the Eilenberg--Mac Lane index $q$ as in \Cref{UnstableSteenrodCoops}, and as such we will begin with analyzing the base case of $q = 0$ where we are interested in manually computing $K_* BA$ for a reasonable abelian group $A$.  Since $K$--theory has K\"unneth isomorphisms and $B(A_1 \times A_2) \simeq BA_1 \times BA_2$, it suffices to do the computation just for $A = C_{p^j}$.
+Unsurprisingly, our analysis will rest on the bar spectral sequence \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}.\]  However, because $K$--theory is naturally a $2$--periodic theory, our method in \Cref{COableCoopnsII} of inducting on homological degree and working with a triangular corner of the spectral sequence will fail because it is not a first-quadrant spectral sequence.  Instead, we will induct on the Eilenberg--Mac Lane index $q$ as in \Cref{UnstableSteenrodCoops}, and as such we will begin with analyzing the base case of $q = 0$ where we are interested in manually computing $K_* BA$ for a reasonable abelian group $A$.  Since $K$--theory has K\"unneth isomorphisms and $B(A_1 \times A_2) \simeq BA_1 \times BA_2$, it suffices to do the computation just for $A = C_{p^j}$. \todo{This only takes care of finite abelian groups $A$.  Is this what reasonable means?}
 
 \begin{theorem}[{\cite[Theorem 5.7]{RavenelWilsonKthyOfEMSpaces}, \cite[Proposition 2.4.4]{HopkinsLurie}}]\label{KtheoryConvertsTorsionToTorsion}
 There is an isomorphism \[BS^1[p^j]_K \cong BS^1_K[p^j].\]
@@ -809,9 +809,9 @@ The induced long exact sequence (known as the Gysin sequence, or as the couple i
 \begin{tikzcd}
 & K^* BS^1 \arrow[leftarrow]{rd}{- \smile [p^j](x)} \\
 K^*(BS^1[p^j]) \arrow[leftarrow]{ru} & & K^* BS^1 \arrow[leftarrow]{ll}{\partial}
-\end{tikzcd}
+\end{tikzcd}\todo{One of the stars on the right half of the diagram needs a dimension shift.  The bottom $\partial$ arrow should be dotted.}
 \end{center}
-where $x$ is a coordinate on $BS^1_K$.  Because $BS^1_K$ is of finite height, the right diagonal map is injective.  It follows that $\partial = 0$, and so this gives a short exact sequence of Hopf algebras, which we can reinterpret as a short exact sequence of group schemes \[B(S^1[p^j])_K \to BS^1_K \xrightarrow{p^j} BS^1_K. \qedhere\]
+where $x$ is a coordinate \todo{You should explain how you're using the map of spherical fibrations to give this.}on $BS^1_K$.  Because $BS^1_K$ is of finite height\todo{I'm confused: does it make sense to say that $BS^1_K$ is of finite height?  It seems like what you're really using is that the formal group $\Gamma$ associated to $K$ has finite height.}, the right diagonal map is injective.  It follows that $\partial = 0$, and so this gives a short exact sequence of Hopf algebras, which we can reinterpret as a short exact sequence of group schemes \[B(S^1[p^j])_K \to BS^1_K \xrightarrow{p^j} BS^1_K. \qedhere\]
 \end{proof}
 
 \begin{remark}\label{KHomologyOfClassifyingSpace}
@@ -827,7 +827,7 @@ where again $\partial = 0$ and hence $K_*(BS^1[p^j])$ is presented as the kernel
 
 There are a couple of approaches to the rest of this calculation, i.e., $K_* \OS{H}{q}$ for $q > 1$.  The original, due to Ravenel and Wilson~\cite{RavenelWilsonKthyOfEMSpaces}, is to complete the calculation for the smallest abelian group $C_p$ and then induct upward toward more complicated groups like $C_{p^j}$ and $C_{p^\infty}$.  More recently, there is also a preprint of Hopkins and Lurie~\cite{HopkinsLurie} that begins with $A = C_{p^\infty}$ and then works downward.  We will do the \emph{easy} parts of both calculations, to give a feel for their relative strengths and deficiencies.
 
-The Ravenel--Wilson version of the calculation proceeds much along the same lines as \Cref{UnstableSteenrodCoops}.  Setting $H = H\Z/p$, we will study the bar spectral sequences \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}\] for different indices $q$ and use the $\circ$--product to push differentials around among them.  Our first move, as in \Cref{UnstableSteenrodCoops}, is to study the bar spectral sequence \[\Tor^{K_* \Z/p}_{*, *}(K_*, K_*) \Rightarrow K_* B\Z/p\] and analyze what \emph{must} happen in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by\todo{Did you also use angle brackets to denote ideals in the rest of the document? Do you care to? Probably not.} \[K_* \OS{H\Z/p}{0} = K_*[[1]] / \<[1]^{p} - 1\> = K_*[[1] - [0]] / \<[1] - [0]\>^{p}.\]  The $\Tor$--algebra for this truncated polynomial algebra $K_*[a_\emptyset] / a_\emptyset^{p}$ is then given by the formula \[\Tor^{K_*[a_\emptyset] / a_\emptyset^{p}}_{*, *}(K_*, K_*) = \Lambda[\sigma a_\emptyset] \otimes \Gamma[\phi a_\emptyset],\] the combination of an exterior algebra and a divided power algebra.  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
+The Ravenel--Wilson version of the calculation proceeds much along the same lines as \Cref{UnstableSteenrodCoops}.  Setting $H = H\Z/p$, we will study the bar spectral sequences \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}\] for different indices $q$ and use the $\circ$--product to push differentials around among them.  Our first move, as in \Cref{UnstableSteenrodCoops}, is to study the bar spectral sequence \[\Tor^{K_* \Z/p}_{*, *}(K_*, K_*) \Rightarrow K_* B\Z/p\] and analyze what \emph{must} happen in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by\todo{Did you also use angle brackets to denote ideals in the rest of the document? Do you care to? Probably not.} \[K_* \OS{H\Z/p}{0} = K_*[[1]] / \<[1]^{p} - 1\> = K_*[[1] - [0]] / \<[1] - [0]\>^{p}.\]  The $\Tor$--algebra for this truncated polynomial algebra $K_*[a_\emptyset] / a_\emptyset^{p}$ is then given by the formula \[\Tor^{K_*[a_\emptyset] / a_\emptyset^{p}}_{*, *}(K_*, K_*) = \Lambda[\sigma a_\emptyset] \otimes \Gamma[\phi a_\emptyset],\] \todo{What is the reason for the $\sigma$ and $\phi$ notation?}the combination of an exterior algebra and a divided power algebra.  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
 \begin{align*}
 d(\phi a_\emptyset)^{[p^d]} & = \sigma a_\emptyset, \\
 \Rightarrow d(\phi a_\emptyset)^{[i + p^d]} & = \sigma a_\emptyset \cdot (\phi a_\emptyset)^{[i]}.
@@ -860,23 +860,23 @@ Remarkably, this maximally interesting case is easier to access directly than pa
 There is an isomorphism of formal group schemes \[(\OS{HC_{p^\infty}}{q})_K \cong (\CP^\infty_K)^{\wedge q}.\]  In particular, $(\OS{HC_{p^\infty}}{q})_K$ is a ``$p$--divisible formal group'' of dimension $\binom{d-1}{q-1}$ and height $\binom{d}{q}$.
 \end{theorem}
 
-\noindent Assume that this Theorem is true for a fixed value of $q$.  First, the cohomological bar spectral sequence lets us calculate just the \emph{formal scheme} structure of $(\OS{HC_{p^\infty}}{q+1})_K$, using the \emph{formal group} structure of $(\OS{HC_{p^\infty}}{q})_K$.  It has signature~(\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}) \[H^*((\OS{HC_{p^\infty}}{q})_K; \G_a) \otimes_{K_0} K_* \Rightarrow K^* \OS{HC_{p^\infty}}{q+1},\] and hence we moved to calculate the formal group cohomology of $(\OS{HC_{p^\infty}}{q})_K$.   The following Lemma furthers the calculations of formal group cohomology in \Cref{CohomologyOfGa} and \Cref{CalculationOfLTTangentSpace} to the situation of connected $p$--divisible groups of higher dimension:
+\noindent Assume that this Theorem is true for a fixed value of $q$.  First, the cohomological bar spectral sequence lets us calculate just the \emph{formal scheme} structure of $(\OS{HC_{p^\infty}}{q+1})_K$, using the \emph{formal group} structure of $(\OS{HC_{p^\infty}}{q})_K$.  It has signature~(\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}) \[H^*((\OS{HC_{p^\infty}}{q})_K; \G_a) \otimes_{K_0} K_* \Rightarrow K^* \OS{HC_{p^\infty}}{q+1},\] and hence we are moved to calculate the formal group cohomology of $(\OS{HC_{p^\infty}}{q})_K$.   The following Lemma furthers the calculations of formal group cohomology in \Cref{CohomologyOfGa} and \Cref{CalculationOfLTTangentSpace} to the situation of connected $p$--divisible groups of higher dimension:
 
 \begin{lemma}[{\cite[Theorem 2.2.10 and Example 2.2.12]{HopkinsLurie}}]
-If $\G$ is a connected $p$--divisible group over a field $k$, then $H^*(\G; \G_a)$ is isomorphic to the symmetric algebra on $H^1(\G[p^j]; \G_a)$. \qed
+If $\G$ is a connected $p$--divisible group over a field $k$, then $H^*(\G; \G_a)$ is isomorphic to the symmetric algebra on $H^1(\G[p^j]; \G_a)$, $0 < j < \infty$. \qed
 \end{lemma}
 
 \begin{corollary}[{\cite[Proposition 2.4.11]{HopkinsLurie}}]
 As a formal scheme, $(\OS{HC_{p^\infty}}{q+1})_K$ is a formal variety of dimension $\binom{d-1}{q}$.
 \end{corollary}
 \begin{proof}
-By setting $\G = (\OS{HC_{p^\infty}}{q})_K$, the Lemma gives us access to the $E^2$--page of our cohomological bar spectral sequence.  We can calculate the dimension of $H^1$ to be\todo{I have tried several times to figure out where this comes from, using tools from the beginning of H--L Section 2.2, but I haven't really convinced myself.  It must have something to do with the dimension of the Dieudonn\'e module of $\G$ minus the dimension of the image of $F$ --- or something?} \[\dim_k 3H^1(\G[p]; \G_a) = \height (\OS{HC_{p^\infty}}{q})_K - \dim (\OS{HC_{p^\infty}}{q})_K = \binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  It follows that the $E_2$--page of this spectral sequence is a polynomial $k$--algebra on $\binom{d-1}{q}$ generators, concentrated in even degrees, so that the spectral sequence collapses and $K^0 \OS{HC_{p^\infty}}{q+1}$ is a power series algebra on as many generators.
+By setting $\G = (\OS{HC_{p^\infty}}{q})_K$, the Lemma gives us access to the $E^2$--page of our cohomological bar spectral sequence.  We can calculate the dimension of $H^1$ to be\todo{I have tried several times to figure out where this comes from, using tools from the beginning of H--L Section 2.2, but I haven't really convinced myself.  It must have something to do with the dimension of the Dieudonn\'e module of $\G$ minus the dimension of the image of $F$ --- or something?} \[\dim_k 3H^1(\G[p]; \G_a) = \height (\OS{HC_{p^\infty}}{q})_K - \dim (\OS{HC_{p^\infty}}{q})_K = \binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  \todo{Is the $\dim_k 3H^1$ a typo?} It follows that the $E_2$--page of this spectral sequence is a polynomial $k$--algebra on $\binom{d-1}{q}$ generators, concentrated in even degrees, so that the spectral sequence collapses and $K^0 \OS{HC_{p^\infty}}{q+1}$ is a power series algebra on as many generators.
 \end{proof}
 
 In order to continue the induction, we now have to identify the group structure on $(\OS{HC_{p^\infty}}{q+1})_K$.  This is done using the theory of Dieudonn\'e modules:
 
 \begin{theorem}[{\cite[Proposition 2.4.12]{HopkinsLurie}}]
-Let $q \ge 1$ be an integer.  Suppose that $\OS{H(\Q_p/\Z_p)}{q}$ and $\OS{HC_p}{q}$ are $K(n)$-good, that $(\OS{H(\Q_p/\Z_p)}{q})_K$ is a connected $p$--divisible group of height $\binom{d}{q}$ and dimension $\binom{d-1}{q-1}$, that the sequence of group schemes\todo{Figure out this formatting. I should be able to just set the fraction to be ``inline'' rather than displaymode, but I don't know how to do that.} \[(\OS{H(\frac{1}{p}\Z_p / \Z_p)}{q})_K \to (\OS{H(\Q_p/\Z_p)}{q})_K \to (\OS{H(\Q_p / \frac{1}{p}\Z_p)}{q})_K \to K_0\] is exact, and the map \[\theta^q\co \Q_p / \Z_p \otimes M(\CP^\infty_K)^{\wedge q} \to M((\OS{H(\Q_p/\Z_p)}{q})_K)\] is an isomorphism.  Then $\theta^{q+1}$ is an isomorphism and the formal group $\OS{H(\Q_p/\Z_p)}{q+1}$ is a connected $p$--divisible group with height $\binom{d}{q+1}$ and dimension $\binom{d-1}{q}$.
+Let $q \ge 1$ be an integer.  Suppose that $\OS{H(\Q_p/\Z_p)}{q}$ and $\OS{HC_p}{q}$ are $K(n)$-good \todo{Have you defined $K(n)$-good?}, that $(\OS{H(\Q_p/\Z_p)}{q})_K$ is a connected $p$--divisible group of height $\binom{d}{q}$ and dimension $\binom{d-1}{q-1}$, that the sequence of group schemes\todo{Figure out this formatting. I should be able to just set the fraction to be ``inline'' rather than displaymode, but I don't know how to do that.} \[(\OS{H(\frac{1}{p}\Z_p / \Z_p)}{q})_K \to (\OS{H(\Q_p/\Z_p)}{q})_K \to (\OS{H(\Q_p / \frac{1}{p}\Z_p)}{q})_K \to K_0\] is exact, and the map \[\theta^q\co \Q_p / \Z_p \otimes M(\CP^\infty_K)^{\wedge q} \to M((\OS{H(\Q_p/\Z_p)}{q})_K)\] is an isomorphism.  Then $\theta^{q+1}$ is an isomorphism and the formal group $\OS{H(\Q_p/\Z_p)}{q+1}$ is a connected $p$--divisible group with height $\binom{d}{q+1}$ and dimension $\binom{d-1}{q}$.
 \end{theorem}
 \begin{proof}[Proof sketch]
 By applying the snake lemma to the diagram
@@ -885,12 +885,12 @@ By applying the snake lemma to the diagram
 0 \arrow{r} & M^{\wedge (q+1)} \arrow{r} \arrow{d}{V} & \Q \otimes M^{\wedge (q+1)} \arrow{r} \arrow{d}{V} & \Q_p / \Z_p \otimes M^{\wedge (q+1)} \arrow{r} \arrow{d}{V} & 0 \\
 0 \arrow{r} & M^{\wedge (q+1)} \arrow{r} & \Q \otimes M^{\wedge (q+1)} \arrow{r} & \Q_p / \Z_p \otimes M^{\wedge (q+1)} \arrow{r} & 0
 \end{tikzcd}
-\end{center}
-we learn that $V$ is a surjective endomorphism of $M^{\wedge (q+1)} M \otimes \Q_p/\Z_p$ and that there is an isomorphism \[\ker(V\co \Q_p/\Z_p \otimes M^{\wedge (q+1)} \to \Q_p/\Z_p \otimes M^{\wedge (q+1)}) \cong \operatorname{coker}(V\co M^{\wedge (q+1)} \to M^{\wedge (q+1)}).\]  The right-hand side is spanned by elements $V^I x$ with $I_1 = 0$, and hence the left-hand side has $k$--vector--space dimension $\binom{d-1}{q}$.  By very carefully studying the bar spectral sequence, one can learn that $\theta^m$ induces a surjection \[\ker V|_{\Q_p / \Z_p \otimes M^{\wedge m}} \to \ker V|_{D(Y)}.\]  In fact, since these two have the same rank, $\theta^m$ is an isomorphism on these subspaces.  Since the action of $V$ is locally nilpotent, this is enough to show that $\theta^m$ is an isomorphism, without restriction to subspaces: if it failed to be an injection, we could apply $V$ enough times to get an example of a nontrivial element in $\ker V_{\Q_p / \Z_p \otimes M^{\wedge m}}$ mapping to zero, and we can manually construct preimages through successive approximation.
+\end{center} \todo{The $\Q$s in the middle should be $\Q_p$, right?}
+and knowing that the middle map is an isomorphism, we learn that $V$ is a surjective endomorphism of $M^{\wedge (q+1)} M \otimes \Q_p/\Z_p$ and that there is an isomorphism \[\ker(V\co \Q_p/\Z_p \otimes M^{\wedge (q+1)} \to \Q_p/\Z_p \otimes M^{\wedge (q+1)}) \cong \operatorname{coker}(V\co M^{\wedge (q+1)} \to M^{\wedge (q+1)}).\]  The right-hand side is spanned by elements $V^I x$ with $I_1 = 0$ \todo{Why is the first component singled out?  Also, what's $m$? What's $Y$?}, and hence the left-hand side has $k$--vector--space dimension $\binom{d-1}{q}$.  By very carefully studying the bar spectral sequence, one can learn that $\theta^m$ induces a surjection \[\ker V|_{\Q_p / \Z_p \otimes M^{\wedge m}} \to \ker V|_{D(Y)}.\]  In fact, since these two have the same rank, $\theta^m$ is an isomorphism on these subspaces.  Since the action of $V$ is locally nilpotent, this is enough to show that $\theta^m$ is an isomorphism, without restriction to subspaces: if it failed to be an injection, we could apply $V$ enough times to get an example of a nontrivial element in $\ker V|_{\Q_p / \Z_p \otimes M^{\wedge m}}$ mapping to zero, and we can manually construct preimages through successive approximation.
 \end{proof}
 
 \begin{remark}[{\cite[Proposition 2.4.13]{HopkinsLurie}}]
-This in hand, you now have to pull apart the full $p$--divisible group to get a calculation of $(\OS{H\Z/p^j}{q})_K$.  From this perspective, this is the hardest part with the longest, most convoluted proof.
+With this in hand, you now have to pull apart the full $p$--divisible group to get a calculation of $(\OS{H\Z/p^j}{q})_K$.  From this perspective, this is the hardest part with the longest, most convoluted proof.
 \end{remark}
 
 \begin{remark}[{\cite[Section 3]{HopkinsLurie}}]
